@@ -1,6 +1,6 @@
-pandas==0.25.3
-pytest==5.3.1
-scipy==1.3.3
-numpy==1.17.4
-mpi4py==3.0.3
-pypolychord==1.15.1
+pandas
+pytest
+scipy
+numpy
+mpi4py
+pypolychord
